# cloudbase

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  Dockerfile
backend/app/: main.py
backend/app/core/: config.py  database.py
